--- a/main/Sample/Northwind.Test/App.config
+++ b/main/Sample/Northwind.Test/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="MasterDbConnection" connectionString="Data Source=.; Initial Catalog=master; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="NorthwindContext" connectionString="Data Source=.; Initial Catalog=NorthwindTest; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
