--- a/main/Sample/Northwind.Web/packages.config
+++ b/main/Sample/Northwind.Web/packages.config
@@ -28,6 +28,7 @@
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.1" targetFramework="net451" />
+  <package id="TrackableEntities.Common" version="2.5.2.1" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
   <package id="Unity.AspNet.WebApi" version="3.5.1404.0" targetFramework="net451" />
   <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net451" />
