--- a/main/Source/Repository.Pattern.Ef6/packages.config
+++ b/main/Source/Repository.Pattern.Ef6/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
-  <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="LINQKit" version="1.1.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="TrackableEntities.Common" version="2.5.2.1" targetFramework="net451" />
+  <package id="TrackableEntities.EF.6" version="2.5.4" targetFramework="net451" />
 </packages>
