--- a/main/Source/Repository.Pattern.Ef6/packages.config
+++ b/main/Source/Repository.Pattern.Ef6/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
-  <package id="LINQKit" version="1.1.1" targetFramework="net451" />
+  <package id="LinqKit" version="1.1.9.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
   <package id="TrackableEntities.Common" version="2.5.6" targetFramework="net451" />
   <package id="TrackableEntities.EF.6" version="2.5.6" targetFramework="net451" />
