--- a/main/Sample/Northwind.Web/Web.config
+++ b/main/Sample/Northwind.Web/Web.config
@@ -6,7 +6,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 
   <connectionStrings>
-    <add name="NorthwindContext" connectionString="Data Source=.; Initial Catalog=Northwind; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="NorthwindContext" connectionString="Data Source=(localdb)\MsSqlLocalDb; Initial Catalog=NorthwindTestUrf; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
